--- a/result.html
+++ b/result.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>result page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main class="main-bg main-wrapper">
-        <section class="first-wrapper">
-            <div class="mid-wrap">
-                <div class="energy-wrap">
+    <main class="main-bg main-result">
+        <section class="result-section">
+            <div class="result-inside">
+                <div class="energy-wrap result-wrap">
                     <div class="logo-div">
                         <img src="images/Frame 78 (1).png" width="100%">
                     </div>
@@ -18,13 +18,15 @@
                         <h3 class="h3-head">Energy saving calculator</h3>
                     </div>
                 </div>
-                <p class="para">Your hot water is?</p>
-                <button class="btn">Gas fired</button>
-                <button class="btn">Electrical</button>
+                <div class="result-tot">
+                    <div class="tot-wrap">
+                        <p class="total-result">30,000</p>
+                    </div>
+                    <p class="pot">Potential energy saving</p>
+                    <a href="/index.html" class="btn return">Return home</a>
+                </div>
             </div>
         </section>
     </main>
-
-    
 </body>
 </html>
