--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <button class="btn">Electrical</button>
             </div>
         </section>
+
+        <ul class="paging">
+            <li><a href="cost.html">cost page</a></li>
+            <li><a href="result.html">result page</li>
+        </ul>
     </main>
 
     
