--- a/cost.html
+++ b/cost.html
@@ -22,7 +22,7 @@
                     <p class="para cost-para">Please enter your building total gas cost per year</p>
                     <div class="costy">
                         <p>Gas cost per year</p>
-                        <input class="cost-year" type="text" name="" id="" value="$">    
+                        <input class="cost-year" type="text" name="" id="" placeholder="$">    
                     </div>
                 </div>
                 <div>
@@ -37,7 +37,7 @@
                     <p class="para cost-para">What temperature is your hot water tank set at?</p>
                     <div class="costy">
                         <p>Hot water tank temperature</p>
-                        <input class="cost-year" type="text" name="" id="" value="0">    
+                        <input class="cost-year" type="text" name="" id="" placeholder="0">    
                     </div>
                 </div>
                 <div>
@@ -51,7 +51,7 @@
                     <p class="para cost-para">Your city yearly average ambient temperature is</p>
                     <div class="costy">
                         <p>Average ambient temperature</p>
-                        <input class="cost-year" type="text" name="" id="" value="0">    
+                        <input class="cost-year" type="text" name="" id="" placeholder="0">    
                     </div>
                 </div>
                 <div class="calc-wrap">
