--- a/index.html
+++ b/index.html
@@ -346,7 +346,12 @@
     <main class="all">
         <div class="content-wrap">
             <header><img src="images/Logo.png" class="ai-logo" alt=""></header>
-
+            <div>
+                <a href="email1aa.html">One</a>
+                <a href="email1b.html">Two</a>
+                <a href="email2a.html">Three</a>
+                <a href="email3a.html">Four</a>
+            </div>
             <section class="mail-hero">
                 <img src="images/Image header.png" alt="" class="hero-bg">
                 <div class="hero-cont">
