--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         .ai-btn {
             display: block;
             margin-block: 1.5rem;
-            margin-inline: auto;
+            /* margin-inline: auto; */
             font-family: var(--inter);
             font-size: var(--font-14);
             font-weight: 600;
