--- a/email1aa.html
+++ b/email1aa.html
@@ -86,7 +86,7 @@
         .ai-btn {
             display: block;
             margin-block: 1.5rem;
-            margin-inline: auto;
+            /* margin-inline: auto; */
             font-family: var(--inter);
             font-size: var(--font-14);
             font-weight: 600;
@@ -146,7 +146,7 @@
                     <li>Improved output speed</li>
                 </ul>
             <p class="paragrapph">With these updates, you’ll be able to write, reply, and edit not only with confidence, but with your own personal flair. All without switching between applications.<br><br>So what are you waiting for? Upgrade your keyboard now and experience the improved efficiency and in-keyboard customization options for yourself.</p>
-            <button class="ai-btn">Let us know what you’re thinking!</button>
+            <button class="ai-btn">Get the Updated Keyboard</button>
             </section>
         </div>
     </main>
