--- a/email1b.html
+++ b/email1b.html
@@ -7,7 +7,7 @@
     <!-- style begins -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
         :root {
             --inter: 'Inter', sans-serif;
@@ -87,6 +87,7 @@
             color: var(--white-clr);
             font-size: var(--font-14);
             line-height: 21px;
+            margin-top: .8rem;
         }
 
         .paragrapph {
@@ -100,7 +101,7 @@
             margin-inline: auto;
             font-family: var(--inter);
             font-size: var(--font-14);
-            font-weight: 600;
+            font-weight: 500;
             line-height: 21px;
             padding: 14px 18px;
             border-radius: 10px;
@@ -178,9 +179,9 @@
                 <ul class="mail-list">
                     <li>Instantly craft replies based off of an entire email or chat thread.</li>
                     <li>Customize the tone, urgency, and length without leaving the keyboard.</li>
-                    <li>A sleek, intuitive interface I’m sure you’ll love.d</li>
+                    <li>A sleek, intuitive interface I’m sure you’ll love</li>
                 </ul>
-            <p class="paragrapph">ow you can not only write, reply, and edit with confidence, but add your own flair without toggling between applications.<br><br>As if these new updates weren’t exciting enough, I’m also giving away a free month of our unlimited writing plan to 10 random users who try out the new keyboard. <br><br>I’m so excited to give you this update and the chance to go pro with our unlimited plan  - I know you’re going to love the in-keyboard customization options and improved efficiency!<br><br> Happy (mobile) writing! <br><br> <b>Shail</b></p>
+            <p class="paragrapph">Now you can not only write, reply, and edit with confidence, but add your own flair without toggling between applications.<br><br>As if these new updates weren’t exciting enough, I’m also giving away a free month of our unlimited writing plan to 10 random users who try out the new keyboard. <br><br>I’m so excited to give you this update and the chance to go pro with our unlimited plan  - I know you’re going to love the in-keyboard customization options and improved efficiency!<br><br> Happy (mobile) writing! <br><br> <b>Shail</b></p>
             </section>
         </div>
     </main>
