--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- style begins -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
         :root {
             --inter: 'Inter', sans-serif;
@@ -16,6 +16,8 @@
             --font-14: 14px;
             --white-clr: #FFFFFF;
             --ai-clr: #58409A;
+            --ai-line: #efefef;
+            /* --ai-line: #D3D3D3; */
         }
 
         * {
@@ -138,7 +140,7 @@
             /* margin-inline: auto; */
             font-family: var(--inter);
             font-size: var(--font-14);
-            font-weight: 600;
+            font-weight: 500;
             line-height: 21px;
             padding: 14px 18px;
             border-radius: 10px;
@@ -148,7 +150,7 @@
         }
 
         .line {
-            background-color: #D3D3D3;
+            background-color: var(--ai-line);
             height: 1px;
             width: 100%;
             margin-block: 2rem;
@@ -317,7 +319,7 @@
 
             .hero-cont p {
                 width: 90%;
-                margin-top: 20px;
+                margin-top: .8px;
             }
             .ai-bottom {
                 padding-inline: 10px;
@@ -346,12 +348,12 @@
     <main class="all">
         <div class="content-wrap">
             <header><img src="images/Logo.png" class="ai-logo" alt=""></header>
-            <div>
+            <!-- <div>
                 <a href="email1aa.html">One</a>
                 <a href="email1b.html">Two</a>
                 <a href="email2a.html">Three</a>
                 <a href="email3a.html">Four</a>
-            </div>
+            </div> -->
             <section class="mail-hero">
                 <img src="images/Image header.png" alt="" class="hero-bg">
                 <div class="hero-cont">
