--- a/email2a.html
+++ b/email2a.html
@@ -7,7 +7,7 @@
     <!-- style begins -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
         :root {
             --inter: 'Inter', sans-serif;
@@ -83,6 +83,7 @@
             color: var(--white-clr);
             font-size: var(--font-14);
             line-height: 21px;
+            margin-top: .8rem;
         }
 
         .paragrapph {
@@ -96,7 +97,7 @@
             /* margin-inline: auto; */
             font-family: var(--inter);
             font-size: var(--font-14);
-            font-weight: 600;
+            font-weight: 500;
             line-height: 21px;
             padding: 14px 18px;
             border-radius: 10px;
