--- a/email3a.html
+++ b/email3a.html
@@ -133,7 +133,7 @@
             font-size: var(--font-14);
         }
 
-        .mail-list a {
+        .mail-list a, .help {
             color: #000;
         }
 
@@ -386,7 +386,7 @@
                         <li>Follow <a target="_blank" href="#">@ParagraphAI</a> for the latest updates from our team.</li>
                         <li>Join the <a href="#" target="_blank">ParagraphAI community</a> and strike up a conversation with fellow ParagraphAI users.</li>
                     </ul>
-                    <p class="paragrapph">Our team is also on-hand and happy to help at any point. If you’re unsure about anything so far, write to us at <a href="#" target="_blank">help@ParagraphAI.com</a> and we'll get right on it. <br><br> Sincerely, <br><br><b>The ParagraphAI Team</b></p>
+                    <p class="paragrapph">Our team is also on-hand and happy to help at any point. If you’re unsure about anything so far, write to us at <a href="#" target="_blank" class="help">help@ParagraphAI.com</a> and we'll get right on it. <br><br> Sincerely, <br><br><b>The ParagraphAI Team</b></p>
                 </div>    
             </section>
         </div>
