--- a/email2a.html
+++ b/email2a.html
@@ -127,10 +127,10 @@
 <body>
     <main class="all">
         <div class="content-wrap">
-            <header><img src="images/Logo.png" class="ai-logo" alt=""></header>
+            <header><img src="-   https://userimg-assets.customeriomail.com/images/client-env-125050/1688123733080_Logo_01H4607XW14QV3AWSKWHMFJM9F.png" class="ai-logo" alt=""></header>
 
             <section class="mail-hero">
-                <img src="images/Image header.png" alt="" class="hero-bg">
+                <img src="https://userimg-assets.customeriomail.com/images/client-env-125050/1688123720892_Image%20header_01H4607HZ5BVTZ648S8BDFHXS7.png" alt="" class="hero-bg">
                 <div class="hero-cont">
                     <h1>Give us Feedback</h1>
                     <p>We'd love to hear your thoughts</p>
