--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ body {
                     </div>
                 </div>
                 <p class="para">Your hot water is?</p>
-                <button class="btn">Gas fired</button>
+                <a href="result.html"><button class="btn">Gas fired</button></a>
                 <button class="btn">Electrical</button>
             </div>
         </section>
