--- a/cost.html
+++ b/cost.html
@@ -248,6 +248,16 @@ body {
     color: #264860;
 }
 
+.hide {
+    opacity: 0;
+}
+
+.showMe {
+    opacity: 1;
+    transition: opacity 1s ease-in;
+    transition-delay: 500ms;
+}
+
 @media screen and (max-width: 800px){
     .cost-wrap {
         width: 90%;
@@ -277,14 +287,14 @@ body {
                         <h3 class="h3-head">Energy saving calculator</h3>
                     </div>
                 </div>
-                <div>
+                <div class="hide" id="hiding">
                     <p class="para cost-para">Please enter your building total gas cost per year</p>
                     <div class="costy">
                         <p>Gas cost per year</p>
                         <input class="cost-year" type="text" name="" id="" placeholder="$">    
                     </div>
                 </div>
-                <div>
+                <div class="hide" id="hiding">
                     <p class="para cost-para">Your building is a?</p>
                     <div class="costy-btn-flex">
                         <button class="btn">Hotel</button> 
@@ -292,21 +302,21 @@ body {
                         <button class="btn">Rental</button>
                     </div>
                 </div>
-                <div>
+                <div class="hide" id="hiding">
                     <p class="para cost-para">What temperature is your hot water tank set at?</p>
                     <div class="costy">
                         <p>Hot water tank temperature</p>
                         <input class="cost-year" type="text" name="" id="" placeholder="0">    
                     </div>
                 </div>
-                <div>
+                <div class="hide" id="hiding">
                     <p class="para cost-para">Dou you have a gas fired swimming pool?</p>
                     <div class="costy-btn-flex"> 
                         <button class="btn">Yes</button> 
                         <button class="btn">No</button>
                     </div>
                 </div>
-                <div>
+                <div class="hide" id="hiding">
                     <p class="para cost-para">Your city yearly average ambient temperature is</p>
                     <div class="costy">
                         <p>Average ambient temperature</p>
@@ -319,5 +329,18 @@ body {
             </div>
         </section>
     </main>
+
+    <script defer>
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('showMe')
+                } 
+            })
+        });
+        const hiddenElements = document.querySelectorAll('#hiding');
+        hiddenElements.forEach((el) => observer.observe(el));
+
+    </script>
 </body>
 </html>
