--- a/cost.html
+++ b/cost.html
@@ -310,7 +310,7 @@ body {
                     </div>
                 </div>
                 <div class="hide" id="hiding">
-                    <p class="para cost-para">Dou you have a gas fired swimming pool?</p>
+                    <p class="para cost-para">Do you have a gas fired swimming pool?</p>
                     <div class="costy-btn-flex"> 
                         <button class="btn">Yes</button> 
                         <button class="btn">No</button>
