--- a/index.html
+++ b/index.html
@@ -3,308 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>sudowrite</title>
+    <!-- style begins -->
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
 
-:root {
-    --blue: #00A3DE;
-    --gray: #6D778B;
-    --white-clr: #F7F9FB;
-    --main-font: 'DM Sans', sans-serif;
-    --weight-500: 500;
-    --weight-600: 600;
-    --weight-700: 700;
-    --font-size: 20px;
-    --font-size-big: 25px;
-}
+        :root {
+            --inter: 'Inter', sans-serif;
+            --comforta: 'Comfortaa', cursive;
+            --font-20: 20px;
+            --font-14: 14px;
+            --white-clr: #FFFFFF;
+        }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-body {
-    font-family: var(--main-font);
-}
+        body {
+            font-family: var(--inter)
+        }
 
-.main-bg {
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+        .content-body {
+            width: 100%;
+            padding-inline: 5px;
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+        }
 
-.main-wrapper {
-    display: grid;
-    place-items: center;
-    background-image: url(images/891613_O928X90\ 1.png);
-    width: 100vw;
-    height: 100vh;
-}
+        .all {
+            width: 100vw;
+            padding-block: 2rem;
+            display: flex;
+            justify-content: center;
+        }
 
-.first-wrapper {
-    border-radius: 60px;
-    background-color: var(--white-clr);
-    width: clamp(350px, 50%, 683px);
-    display: grid;
-    place-items: center;
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-}
+        .content-wrap {
+            width: min(90%, 556px);
+        }
 
-.energy-wrap {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-bottom: 3rem;
-}
+        .ai-logo {
+            width: 157px;
+            padding-left: 5px;
+            display: inline-block;
+        }
 
-.logo-div {
-    width: 88.88px;
-}
+        .mail-hero {
+            margin: 2rem 0 1rem 0;
+            width: 100%;
+            position: relative;
+        }
 
-.logo-div img{
-   display: block;
-}
+        .mail-hero img {
+            width: 100%;
+            display: block;
+        }
 
-.h3-head {
-    width: 183px;
-    font-size: var(--font-size-big);
-    color: var(--blue);
-    font-weight: var(--weight-500);
-    line-height: 26.66px;
-}
+        .paragrapph {
+            color: #555555;
+            line-height: 21px;
+            text-align: center;
+            width: min(90%, 500px);
+            margin-inline: auto;
+        }
+        
+        .para-one {
+            font-size: var(--font-20);
+        }
+        .para-two {
+            font-size: var(--font-14);
+        }
 
-.para {
-    font-size: var(--font-size);
-    color: var(--gray);
-    text-align: center;
-    margin-bottom: 1.8rem;
-    transition: 400ms ease-in;
-    opacity: 0;
-}
 
-.btn {
-    opacity: 0;
-    display: block;
-    width: 100%;
-    font-family: var(--main-font);
-    color: var(--blue);
-    font-size: 14px;
-    line-height: 18.23px;
-    background-color: transparent;
-    border: var(--blue) 2px solid;
-    padding: 10px 20px 10px 20px;
-    border-radius: 40px;
-    margin-bottom: 10px;
-    cursor: pointer;
-}
-
-#hot-btn-1,
-#hot-btn-2 {
-    transition: 400ms ease-in;
-}
-
-.btn:hover {
-    background-color: var(--blue);
-    color: var(--white-clr);
-    transition: 400ms ease-in-out;
-}
-
-/* gas cost page begins */
-.cost-wrapper {
-    padding-block: 3rem;
-    background-image: url(images/891613_O928X90\ 1\ \(1\).png);
-}
-
-.cost-wrap {
-    margin-inline: auto;
-    width: clamp(280px, 60%, 683px);
-    background-color: var(--white-clr);
-    display: grid;
-    place-items: center;
-    border-radius: 40px;
-}
-
-.cost-inside {
-    padding-block: 2.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-    width: 70%;
-}
-
-.cost-energy-wrap {
-    justify-content: center;
-    background-color: var(--white-clr);
-    margin-bottom: unset;
-}
-
-.cost-para {
-    width: 280px;
-    margin-inline: auto;
-}
-
-.costy {
-    min-height: 42px;
-    background-color: #FFFFFF;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 40px;
-    padding: 5px 5px 5px 20px;
-}
-
-.costy p {
-    color: var(--gray);
-    font-size: 14px;
-}
-
-.cost-year {
-    border: 1px solid #F2F3F4;
-    color: var(--gray);
-    height: 42px;
-    border-radius: 40px;
-    text-align: center;
-    color: var(--gray);
-    font-size: 16px;
-}
-
-.cost-year:focus {
-    outline: 2px solid var(--blue);
-}
-
-.costy-btn-flex {
-    margin-inline: auto;
-    width: 80%;
-    display: flex;
-    gap: 5px;
-}
-
-.calc-wrap {
-    width: 80%;
-    margin-inline: auto;
-}
-
-/* result style */
-.main-result {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-    width: 100%;
-    background-image: url(images/891613_O928X90\ 1\ \(1\).png);
-}
-
-.result-section {
-    margin-inline: auto;
-    border-radius: 60px;
-    background-color: var(--white-clr);
-    width: clamp(350px, 50%, 683px);
-    display: grid;
-    place-items: center;
-    padding-top: 3rem;
-    padding-bottom: 5rem;
-}
-
-.result-inside {
-    width: 70%;
-}
-
-.result-tot {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-}
-
-.tot-wrap {
-    background-image: url(images/Vector\ 4.png), url(images/Vector\ 5.png);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: contain;
-    width: 273px;
-    height: 271px;
-    border: 5px solid #00A3DE33;
-    border-radius: 40px;
-    display: grid;
-    place-items: center;
-}
-
-.total-result {
-    font-size: 60px;
-    font-weight: var(--font-size-big);
-    color: var(--blue);
-}
-
-.result-wrap {
-    justify-content: center;
-    margin-bottom: 4rem;
-}
-
-.return {
-    text-decoration: none;
-    text-align: center;
-}
-
-.pot {
-    width: 310.8px;
-    font-size: 32px;
-    line-height: 30.46px;
-    margin-bottom: 1rem;
-    color: #264860;
-}
-
-@media screen and (max-width: 800px){
-    .cost-wrap {
-        width: 90%;
-    }
-
-    .cost-inside {
-        width: 95%;
-    }
-
-    .costy {
-        padding-left: 10px;
-    }
-}
-</style>
+        .ai-btn {
+            display: inline-block;
+            margin-inline: auto;
+            width: 200px;
+            font-family: var(--inter);
+            font-size: var(--font-14);
+            font-weight: 500;
+            line-height: 21px;
+            padding: 14px 18px;
+            border-radius: 50px;
+            text-decoration: none;
+            text-align: center;
+            border: none;
+            color: var(--white-clr);
+            /* background-image: linear-gradient(to left, #CA6C5C, #492F92); */
+            background-color: #3f37c9;
+            box-shadow: 3px 0px 15px 0px #3f37c9;
+        }
+    </style>
+    <!-- style ends -->
 </head>
-
 <body>
-    <main class="main-bg main-wrapper">
-        <section class="first-wrapper">
-            <div class="mid-wrap">
-                <div class="energy-wrap">
-                    <div class="logo-div">
-                        <img src="images/Frame 78 (1).png" width="100%">
-                    </div>
-                    <div>
-                        <h3 class="h3-head">Energy saving calculator</h3>
-                    </div>
-                </div>
-                <p class="para" id="hot-para">Your hot water is?</p>
-                <button class="btn" id="hot-btn-1">Gas fired</button>
-                <button class="btn" id="hot-btn-2">Electrical</button>
-            </div>
-        </section>
-    </main>
+    <main class="all">
+        <div class="content-wrap">
+            <header><img src="https://userimg-assets.customeriomail.com/images/client-env-125050/1688123733080_Logo_01H4607XW14QV3AWSKWHMFJM9F.png" class="ai-logo" alt=""></header>
 
-    <script>
-        const hotPara = document.getElementById('hot-para');
-        const hotBtnOne = document.getElementById('hot-btn-1');
-        const hotBtnTwo = document.getElementById('hot-btn-2');
-        document.getElementById('hot-btn-2');
-        setTimeout(function() {
-        hotPara.style.opacity = 1;
-        setTimeout(function() {
-          hotBtnOne.style.opacity = 1;
-          setTimeout(function() {
-              hotBtnTwo.style.opacity = 1;
-          }, 500); // Delay for the third action
-        }, 600); // Delay for the second action
-      }, 700); // 
-    </script>
+            <section class="mail-hero">
+                <img src="images/unnamed.png" alt="" class="hero-bg">
+            </section>
+
+            <section class="content-body">
+                <p class="paragrapph para-one">Use Brainstorm for help with character names, world-building details, plot points, or anything else!
+                </p>
+                <img src="images/unnamed.gif" alt="mail-gif" width="100%">
+                <a href="#" target="_blank" class="ai-btn">Go to Sudowrite</a>
+                <p class="paragrapph para-two">(It also works for or tricky dialogue, magical spells, mythical creatures, character backstories, motivations, plot devices, and so much more.)
+                </p>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
