--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>sudowrite</title>
+    <title>Pro Tip</title>
     <!-- style begins -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
@@ -69,13 +69,7 @@
             text-align: center;
             width: min(90%, 500px);
             margin-inline: auto;
-        }
-        
-        .para-one {
             font-size: var(--font-20);
-        }
-        .para-two {
-            font-size: var(--font-14);
         }
 
 
@@ -88,14 +82,12 @@
             font-weight: 500;
             line-height: 21px;
             padding: 14px 18px;
-            border-radius: 50px;
+            border-radius: 10px;
             text-decoration: none;
             text-align: center;
             border: none;
             color: var(--white-clr);
-            /* background-image: linear-gradient(to left, #CA6C5C, #492F92); */
-            background-color: #3f37c9;
-            box-shadow: 3px 0px 15px 0px #3f37c9;
+            background-image: linear-gradient(to left, #CA6C5C, #492F92);
         }
     </style>
     <!-- style ends -->
@@ -106,16 +98,14 @@
             <header><img src="https://userimg-assets.customeriomail.com/images/client-env-125050/1688123733080_Logo_01H4607XW14QV3AWSKWHMFJM9F.png" class="ai-logo" alt=""></header>
 
             <section class="mail-hero">
-                <img src="images/unnamed.png" alt="" class="hero-bg">
+                <img src="images/Image.png" alt="" class="hero-bg">
             </section>
 
             <section class="content-body">
-                <p class="paragrapph para-one">Use Brainstorm for help with character names, world-building details, plot points, or anything else!
+                <img src="images/Group 15.png" alt="mail-gif" width="100%">
+                <p class="paragrapph para-one">Use <b>Brainstorm</b> for help with character names, world-building details, plot points, or anything else!
                 </p>
-                <img src="images/unnamed.gif" alt="mail-gif" width="100%">
-                <a href="#" target="_blank" class="ai-btn">Go to Sudowrite</a>
-                <p class="paragrapph para-two">(It also works for or tricky dialogue, magical spells, mythical creatures, character backstories, motivations, plot devices, and so much more.)
-                </p>
+                <a href="#" target="_blank" class="ai-btn">Go to ParagraphAI</a>
             </section>
         </div>
     </main>
