--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
             gap: 1.5rem;
         }
 
+        .content-body img {
+            margin-inline: auto;
+        }
+
         .all {
             width: 100vw;
             padding-block: 2rem;
@@ -67,9 +71,9 @@
             color: #555555;
             line-height: 21px;
             text-align: center;
-            width: min(90%, 500px);
+            width: min(90%, 428px);
             margin-inline: auto;
-            font-size: var(--font-20);
+            font-size: var(--font-14);
         }
 
 
@@ -102,7 +106,7 @@
             </section>
 
             <section class="content-body">
-                <img src="images/Group 15.png" alt="mail-gif" width="100%">
+                <img src="images/Group 15.png" alt="mail-gif" width="247px">
                 <p class="paragrapph para-one">Use <b>Brainstorm</b> for help with character names, world-building details, plot points, or anything else!
                 </p>
                 <a href="#" target="_blank" class="ai-btn">Go to ParagraphAI</a>
