--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </section>
 
             <section class="content-body">
-                <img src="images/Group 15.png" alt="mail-gif" width="247px">
+                <img src="images/paragrapgh-ai-gif (2).gif" alt="mail-gif" width="247px">
                 <p class="paragrapph para-one">Use <b>Brainstorm</b> for help with character names, world-building details, plot points, or anything else!
                 </p>
                 <a href="#" target="_blank" class="ai-btn">Go to ParagraphAI</a>
@@ -114,4 +114,4 @@
         </div>
     </main>
 </body>
-</html>
+</html> 
