--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         }
 
         .content-body {
+            margin-top: 1rem;
             width: 100%;
             padding-inline: 5px;
             display: flex;
@@ -35,9 +36,23 @@
             gap: 1.5rem;
         }
 
+        h2 {
+            font-family: var(--comforta);
+            font-size: var(--font-20);
+            line-height: 30px;
+            font-weight: 700;
+            text-align: center;
+            max-width: 75%;
+            margin-inline: auto;
+        }
+
+        .clr-fix {
+            color: #58409A;
+        }
+
         .content-body img {
             margin-inline: auto;
-            margin-top: 2rem;
+
         }
 
         .all {
@@ -69,7 +84,8 @@
         }
 
         .paragrapph {
-            color: #555555;
+            color: #2C3747;
+            font-weight: 400;
             line-height: 21px;
             text-align: center;
             width: min(90%, 428px);
@@ -107,10 +123,12 @@
             </section>
 
             <section class="content-body">
-                <img src="images/paragrapgh-ai-gif (2).gif" alt="mail-gif" width="247px">
-                <p class="paragrapph para-one">Use <b>Brainstorm</b> for help with character names, world-building details, plot points, or anything else!
+                <h2>Use <span class="clr-fix">FIX</span> to instantly improve your messages in just one click.</h2>
+                <img src="images/paragrapgh-ai-gif (2).gif" alt="mail-gif" width="170px">
+                <p class="paragrapph para-one">Ready to give <span class="clr-fix">FIX</span> a try?
                 </p>
                 <a href="#" target="_blank" class="ai-btn">Go to ParagraphAI</a>
+                <p class="paragrapph">The best part? The 'Fix' button adapts to your writing style over time, making it a truly personalized tool.</p>
             </section>
         </div>
     </main>
